v1.11.x/connectors/database/snowflake/yaml.mdx
---
title: Run the Snowflake Connector Externally
description: Integrate YAML for metadata sync, profiling, and lineage. Start configuring with our easy-to-follow guide.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import AutoClassification from '/snippets/connectors/yaml/auto-classification.mdx'
import DataProfiler from '/snippets/v1.11.x/connectors/yaml/data-profiler.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'
import QueryUsage from '/snippets/connectors/yaml/query-usage.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import DataQuality from '/snippets/connectors/yaml/data-quality.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/snowflakes.webp'
name="Snowflake"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "dbt", "Stored Procedures", "Owners", "Tags", "Sample Data", "Auto-Classification"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the Snowflake connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Username and password authentication
- **Key Pair Auth** — Private key authentication with optional passphrase (see [Snowflake Key Pair Auth docs](https://docs.snowflake.com/en/user-guide/key-pair-auth))
- **SSO** — Single-Sign-On via the `authenticator` connection argument
</Info>

Configure and schedule Snowflake metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v1.11.x/connectors/ingestion/workflows/metadata/incremental-extraction/snowflake)
- [Query Usage](#query-usage)
- [Lineage](#lineage)
- [Data Profiler](#data-profiler)
- [Data Quality](#data-quality)
- [dbt Integration](#dbt-integration)
<ExternalIngestionDeployment />
## Requirements
### Python Requirements
<PythonRequirements />
To run the Snowflake ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[snowflake]"
```
If you want to run the Usage Connector, you'll also need to install:
```bash
pip3 install "openmetadata-ingestion[snowflake-usage]"
```
To ingest basic metadata snowflake user must have the following privileges:
  - `USAGE` Privilege on Warehouse
  - `USAGE` Privilege on Database
  - `USAGE` Privilege on Schema
  - `SELECT` Privilege on Tables

Before you grant privileges, replace these placeholders with your own values:

| Placeholder | Description |
|---|---|
| `<role_name>` | Name of the new Snowflake role you want to create and assign to the user |
| `<user_name>` | Username for the new Snowflake user being created |
| `<password>` | A strong password for the new Snowflake user |
| `<warehouse_name>` | Name of the Snowflake warehouse the new role needs access to |
| `<database_name>` | Name of the Snowflake database from which you want to ingest data |

```sql
-- Create new role
CREATE ROLE <role_name>;
-- Create new user
CREATE USER <user_name> DEFAULT_ROLE=<role_name> PASSWORD='<password>';
-- Grant role to user
GRANT ROLE <role_name> TO USER <user_name>;
-- Grant USAGE Privilege on Warehouse to new role created above
GRANT USAGE ON WAREHOUSE <warehouse_name> TO ROLE <role_name>;
-- Grant USAGE Privilege on Database to new role created above
GRANT USAGE ON DATABASE <database_name> TO ROLE <role_name>;
-- Grant USAGE Privilege on required Schemas to new role created above
GRANT USAGE ON ALL SCHEMAS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT USAGE ON FUTURE SCHEMAS IN DATABASE <database_name> TO ROLE <role_name>;
-- Grant SELECT Privilege on required tables & views to new role created above
GRANT SELECT ON ALL FUTURE TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE EXTERNAL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL EXTERNAL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE VIEWS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL VIEWS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE DYNAMIC TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL DYNAMIC TABLES IN DATABASE <database_name> TO ROLE <role_name>;
```

While running the usage workflow, OpenMetadata fetches the query logs by querying `snowflake.account_usage.query_history` table. For this, the Snowflake user should be granted the `ACCOUNTADMIN` role or a role granted IMPORTED PRIVILEGES on the database `SNOWFLAKE`.
```sql
-- Grant IMPORTED PRIVILEGES on all Schemas of SNOWFLAKE DB to New Role
GRANT IMPORTED PRIVILEGES ON ALL SCHEMAS IN DATABASE SNOWFLAKE TO ROLE <role_name>;
```
If ingesting tags, the user should also have permissions to query `snowflake.account_usage.tag_references`. For this, the Snowflake user should be granted the `ACCOUNTADMIN` role or a role granted IMPORTED PRIVILEGES on the `SNOWFLAKE` database.
```sql
-- Grant IMPORTED PRIVILEGES on all Schemas of SNOWFLAKE DB to New Role
GRANT IMPORTED PRIVILEGES ON ALL SCHEMAS IN DATABASE SNOWFLAKE TO ROLE <role_name>;
```
For more information about the `account_usage` schema, see [Account Usage](https://docs.snowflake.com/en/sql-reference/account-usage).

## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/snowflakeConnection.json)
you can find the structure to create a connection to Snowflake.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

This is a sample config for Snowflake:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Snowflake connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Specify the User to connect to Snowflake. It should have enough privileges to read all the metadata.

</ContentSection>

<ContentSection id={3} title="Password" lines="8">

**password**: Password to connect to Snowflake.

</ContentSection>

<ContentSection id={4} title="Warehouse" lines="9">

**warehouse**: Snowflake warehouse is required for executing queries to fetch the metadata. Enter the name of warehouse against which you would like to execute these queries.

</ContentSection>

<ContentSection id={5} title="Account" lines="10">

**account**: Snowflake account identifier uniquely identifies a Snowflake account within your organization, as well as throughout the global network of Snowflake-supported cloud platforms and cloud regions. If the Snowflake URL is `https://xyz1234.us-east-1.gcp.snowflakecomputing.com`, then the account is `xyz1234.us-east-1.gcp`.

</ContentSection>

<ContentSection id={6} title="Database" lines="11">

**database**: The database of the data source is an optional parameter, if you would like to restrict the metadata reading to a single database. If left blank, OpenMetadata ingestion attempts to scan all the databases.

</ContentSection>

<ContentSection id={7} title="Account Usage Schema" lines="12">

**accountUsageSchema**: Full name of account usage schema, used in case your user does not have direct access to `SNOWFLAKE.ACCOUNT_USAGE` schema. In such case you can replicate tables `QUERY_HISTORY`, `TAG_REFERENCES`, `PROCEDURES`, `FUNCTIONS` to a custom schema let's say `CUSTOM_DB.CUSTOM_SCHEMA` and provide the same name in this field.

When using this field, make sure you have all these tables available within your custom schema  `QUERY_HISTORY`, `TAG_REFERENCES`, `PROCEDURES`, `FUNCTIONS`.

</ContentSection>

<ContentSection id={8} title="Include Transient Tables" lines="13">

**includeTransientTables**: Optional configuration for ingestion of TRANSIENT and TEMPORARY tables, By default, it will skip the TRANSIENT and TEMPORARY tables.

</ContentSection>

<ContentSection id={9} title="Include Streams" lines="14">

**includeStreams**: Optional configuration for ingestion of streams, By default, it will skip the streams.

</ContentSection>

<ContentSection id={10} title="Include Stages" lines="15">

**includeStages**: Optional configuration for ingestion of Snowflake stages (internal and external). By default, stages are not ingested.

</ContentSection>

<ContentSection id={11} title="Query Tag" lines="16">

**queryTag**: Session query tag used to monitor usage on Snowflake. To use a query tag, the Snowflake user should have enough privileges to alter the session.

</ContentSection>

<ContentSection id={12} title="Client Session Keep Alive" lines="17">

**clientSessionKeepAlive**: Optional Configuration to keep the session active in case the ingestion job runs for longer duration.

</ContentSection>

<ContentSection id={13} title="Private Key" lines="18">

**privateKey**: If you have configured the key pair authentication for the given user you will have to pass the private key associated with the user in this field. For more information about key-pair authentication, see [Key-pair authentication and key-pair rotation](https://docs.snowflake.com/en/user-guide/key-pair-auth).<br/><br/>

Ensure your private key is formatted correctly before passing it. The key must be a single line with all line breaks replaced by `\n`.<br/><br/>
    
For example, if you have the following multi-line key (raw format):

```
-----BEGIN ENCRYPTED PRIVATE KEY-----
MII..
MBQ...
CgU..
8Lt..
...
h+4=
-----END ENCRYPTED PRIVATE KEY-----
```

Replace it with the following single-line key (required format):

```
-----BEGIN ENCRYPTED PRIVATE KEY-----\nMII..\nMBQ...\nCgU..\n8Lt..\n...\nh+4=\n-----END ENCRYPTED PRIVATE KEY-----\n
```

Replace every newline character in your key with a literal `\n`, including after the final line.

</ContentSection>

<ContentSection id={14} title="Snowflake Private Key Passphrase" lines="19">

**snowflakePrivatekeyPassphrase**: If you have configured the encrypted key pair authentication for the given user you will have to pass the paraphrase associated with the private key in this field. You can checkout [this](https://docs.snowflake.com/en/user-guide/key-pair-auth) doc to get more details about key-pair authentication.

</ContentSection>

<ContentSection id={15} title="Role" lines="20">

**role**: You can specify the role of user that you would like to ingest with, if no role is specified the default roles assigned to user will be selected.

</ContentSection>

<ContentSection id={16} title="Connection Options" lines="21">

#### Advanced Configuration

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={17} title="Connection Arguments" lines="22">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={18} title="Source Config" lines="25-68">

<SourceConfigDef />

</ContentSection>

<ContentSection id={19} title="Sink Configuration" lines="69-71">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={20} title="Workflow Configuration" lines="72-88">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="snowflake_config.yaml">

```yaml
source:
  type: snowflake
  serviceName: local_snowflake
  serviceConnection:
    config:
      type: Snowflake
      username: username
      password: password
      warehouse: warehouse
      account: account
      # database: database
      # accountUsageSchema: SNOWFLAKE.ACCOUNT_USAGE
      includeTransientTables: false
      includeStreams: false
      # includeStages: false
      # queryTag: my_query_tag
      clientSessionKeepAlive: false
      # privateKey: privateKey
      # snowflakePrivatekeyPassphrase: passphrase
      # role: role
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
<QueryUsage connector="snowflake" />
<Lineage connector="snowflake" />
<DataProfiler connector="snowflake" />
<AutoClassification connector="snowflake" />
<DataQuality />
## dbt Integration
You can learn more about how to ingest dbt models' definitions and their lineage [here](/v1.11.x/connectors/database/dbt).
